# elnafo

./: .gitignore  Cargo.toml  README.md  diesel.toml  flake.nix
crates/db/: .env  Cargo.toml
crates/db/src/: lib.rs  models.rs
crates/elnafo-frontend/: .gitignore  Cargo.toml  index.html  package.json  vite.config.ts
crates/elnafo-frontend/src/: api-client.ts  lib.rs
crates/elnafo-frontend/src/api/: client.ts  user.ts
crates/elnafo-frontend/src/assets/: style.css
crates/elnafo-frontend/src/views/: Base.vue
crates/elnafo-frontend/src/views/user/: SignIn.vue
crates/elnafo-frontend/templates/: base.html
crates/frontend/: Cargo.toml  askama.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/frontend/src/: App.vue  api-client.ts  lib.rs  main.ts  router.ts
crates/frontend/src/assets/: style.css
crates/frontend/src/components/: HelloWorld.vue  Login.vue  NavBar.vue  TheWelcome.vue  WelcomeItem.vue
crates/frontend/src/components/icons/: Meerkat.vue
crates/frontend/src/services/: user.ts
crates/frontend/src/stores/: preferencies.ts  user.ts
crates/frontend/src/views/: Base.vue  Error.vue  Me.vue  SignIn.vue  User.vue
crates/frontend/src/views/user/: Preferencies.vue  Profile.vue  SignIn.vue  SignUp.vue
crates/frontend/src/views/user/preferencies/: Account.vue  Profile.vue
crates/frontend/templates/: base.html
crates/server/: Cargo.toml
crates/server/src/: main.rs
src/: config.rs  error_handle.rs  main.rs  state.rs
src/api/: doc.rs  errors.rs  middleware.rs  mod.rs  user.rs
src/api/v1/: errors.rs  middleware.rs  mod.rs  token.rs  user.rs
src/db/: errors.rs  mod.rs  models.rs  schema.rs  user.rs
src/db/migrations/2024-03-04-191840_create_users/: up.sql
src/resources/: mod.rs
