[package]
name = "elnafo-backend"
version = "0.1.0"
edition = "2021"
authors = ["L-Nafaryus <l.nafaryus@elnafo.ru>"]

[dependencies]
axum = { version = "0.7.4", features = ["http2", "macros", "multipart"] }
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "fs",
    "rt-multi-thread",
] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
diesel = { version = "2.1.4", features = [
    "postgres",
    "chrono",
    "uuid",
    "time",
] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
time = "0.3.34"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
chrono = { version = "0.4.35", features = ["serde"] }
jsonwebtoken = "9.2.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower-http = { version = "0.5.2", features = [
    "trace",
    "cors",
    "compression-gzip",
    "decompression-gzip",
] }
elnafo-frontend = { version = "0.1.0", path = "crates/elnafo-frontend" }
mime_guess = "2.0.4"
sqids = "0.4.1"
image = "0.25.1"
toml = "0.8.12"
glob = "0.3.1"
deadpool-sync = "0.1.2"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
deadpool = "0.11.1"

[workspace]
members = ["crates/elnafo-frontend"]
resolver = "2"
